# skala-homework

./: .gitignore
python_data/: README.md  pyproject.toml
python_data/Python_data_0720_Day1/capstone01_async_etl/: test_pipeline.py
python_data/Python_data_0720_Day1/capstone01_async_etl/output/: invalid_records.json
python_data/Python_data_0720_Day1/ex02_pydantic_validation/: solution.py
python_data/Python_data_0720_Day1/ex03_async_collector/: solution.py
python_data/Python_data_0721_Day2/: README.md  requirements.txt
python_data/Python_data_0721_Day2/Advanced/: analysis.py  readme.md
python_data/Python_data_0721_Day2/Advanced/output/: advanced_report.md  column_profile.csv  data_quality_summary.csv
python_data/Python_data_0721_Day2/Total 1/: models.py  pipeline.py  readme.md
python_data/Python_data_0721_Day2/Total 1/output/: products.csv  products.parquet
python_data/Python_data_0721_Day2/Total 2/: analysis.py  readme.md
python_data/Python_data_0721_Day2/Total 2/output/: analysis_summary.json  (+1 more)
python_data/Python_data_0721_Day2/Total 3/: config.py  readme.md  report.py  run_scheduler.py
python_data/Python_data_0721_Day2/practice 1/: readme.md  solution.py  study_guide.py
python_data/Python_data_0721_Day2/practice 2/: readme.md  study_guide.py
python_data/Python_data_0721_Day2/practice 3/: dead_letter.json  readme.md
python_data/Python_data_0721_Day2/practice 4/: readme.md  solution.py
python_data/Python_data_0721_Day2/practice 5/: readme.md  solution.py
python_data/data/: api_response.json  sales_raw.csv  telco_churn.csv
(+129 files in other folders)
