[project]
name = "python-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.4",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "matplotlib>=3.11.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "polars>=1.42.1",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "schedule>=1.2.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
